[gd_scene load_steps=6 format=3 uid="uid://bhhk3mdcynkp8"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage4/swarm_4.gd" id="1_7kahv"]
[ext_resource type="Texture2D" uid="uid://bdvy24x1x5my" path="res://Assets/Stages/04/Eyeball4.png" id="1_klv2p"]
[ext_resource type="PackedScene" uid="uid://dyyfgfuvs4qcn" path="res://Scenes/Stages/Stage4/bullet_4.tscn" id="2_linut"]

[sub_resource type="CircleShape2D" id="CircleShape2D_atclt"]
radius = 132.0

[sub_resource type="Gradient" id="Gradient_b8tox"]
offsets = PackedFloat32Array(0, 0.184332, 0.83871, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Swarm4" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_7kahv")
bullet = ExtResource("2_linut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_atclt")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-1, 0)
amount = 100
lifetime = 0.5
local_coords = true
texture = ExtResource("1_klv2p")
emission_shape = 2
emission_sphere_radius = 100.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
orbit_velocity_min = 0.25
orbit_velocity_max = 0.75
radial_accel_min = -50.0
angle_max = 360.0
scale_amount_min = 0.1
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_b8tox")

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
